Colocando os links certos

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="profile">
             <img src="./assets/avatar.png" alt="Foto de Guilherme Fernandes Sério">
 
-            <p>@Devgfg14</p>
+            <p>@dra.aryanearaujo</p>
         </div>
         
         <div id="switch" onclick="toggleMode()">
@@ -31,36 +31,37 @@
 
         <ul>
             <li>
-                <a href="https://www.instagram.com/devgfg14/" target="_blank">Acesse meu instagram</a>
+                <a href="https://wa.me/+5562981997402" target="_blank">Marque uma consulta</a>
             </li>
 
             <li>
-                <a href="https://twitter.com/Devgfg14" target="_blank">Acesse meu twitter</a>
+                <a href="https://instagram.com/dra.aryanearaujo?igshid=MmIzYWVlNDQ5Yg==" target="_blank">Acesse meu instagram</a>
             </li>
 
             <li>
-                <a href="https://github.com/Guilhermegfg" target="_blank">Acesse meu github</a>
+                <a href="https://twitter.com/aryanegomes_" target="_blank">Acesse meu twitter</a>
             </li>
 
             <li>
-                <a href="https://www.linkedin.com/in/guilhermegfg14/" target="_blank">acesse meu linkedin</a>
+                <a href="https://www.linkedin.com/in/aryanegomesaraujo" target="_blank">acesse meu linkedin</a>
             </li>
         </ul>
         <div id="social-links">
-            <a href="https://github.com/Guilhermegfg" target="_blank">
-                <ion-icon name="logo-github"></ion-icon>
-            </a>
 
-            <a href="https://www.instagram.com/devgfg14/" target="_blank">
+            <a href="https://instagram.com/dra.aryanearaujo?igshid=MmIzYWVlNDQ5Yg==" target="_blank">
                 <ion-icon name="logo-instagram"></ion-icon>
             </a>
 
-            <a href="https://twitter.com/Devgfg14" target="_blank">
+            <a href="https://twitter.com/aryanegomes_" target="_blank">
                 <ion-icon name="logo-twitter"></ion-icon>
             </a>
 
-            <a href="https://www.linkedin.com/in/guilhermegfg14" target="_blank">
+            <a href="https://www.linkedin.com/in/aryanegomesaraujo" target="_blank">
                 <ion-icon name="logo-linkedin"></ion-icon>
+            </a>
+
+            <a href="https://wa.me/+5562981997402" target="_blank">
+                <ion-icon name="logo-whatsapp"></ion-icon>
             </a>
 
         </div>
