Adicionando mensagem pronta ao link do whatsapp

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <ul>
             <li>
-                <a href="https://wa.me/+5562981997402" target="_blank">Marque uma consulta</a>
+                <a href="https://wa.me/+5562981997402/?text=Ol%C3%A1,%20vi%20seu%20perfil%20no%20instagram%20e%20gostaria%20de%20marcar%20uma%20consulta!" target="_blank">Marque uma consulta</a>
             </li>
 
             <li>
